--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.5.2",
     "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1",
     "pac-proxy-agent": "^3.0.0",
     "request": "^2.88.0",
     "vue": "^2.5.16",
